feat: integrate more ui with api
