# pages/shared/dtos/provider.ts
@@ -1,13 +1,30 @@
-﻿import { ProviderType } from "../enums/provider";
-import {BaseDto} from "./base";
-import {TransportSmtpConfig, TransportApiConfig} from "./transport";
+﻿import { ProviderType } from '../enums/provider';
 
-export class ProviderConfigDto extends BaseDto {
-  name: string = '';
-  userId: number = 0;
-  type: ProviderType = ProviderType.UNKNOWN;
-  domain: string = '';
-  smtp?: TransportSmtpConfig;
-  api?: TransportApiConfig;
-  enabled: boolean = true;
+export interface BaseDto {
+  id: number;
+  createdAt: string;
+  updatedAt: string;
+}
+
+export interface SmtpConfig {
+  host: string;
+  port: number;
+  secure: boolean;
+  username: string;
+  password: string;
+}
+
+export interface ApiConfig {
+  token: string;
+  host: string;
+}
+
+export interface ProviderConfigDto extends BaseDto {
+  name: string;
+  userId: number;
+  type: ProviderType;
+  domain: string;
+  smtp?: SmtpConfig;
+  api?: ApiConfig;
+  enabled?: boolean;
 }
